--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 28.04.2022 12:41:32</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 28.04.2022 13:10:50</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -118,6 +118,41 @@
 </table>
 <table>
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
+<tr>
+<td>
+<table class="dm">
+<tbody>
+<tr>
+<td class="amount">120 g</td>
+<td class="title">Smažené králičí krokety, trhaný salát, ředkvičky, chřest,
+dijonská majonéza, toast 1a,3,7,10</td>
+<td class="pricem">179 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Chřestový krém s vaječnou sedlinou 1a,3,7</td>
+<td class="pricem">79 Kč</td>
+</tr>
+<tr>
+<td class="amount">150 g</td>
+<td class="title">Dušená vepřová líčka, tarhoňa s hráškem, blanšírovaný chřest 1a,3,7</td>
+<td class="pricem">209 Kč</td>
+</tr>
+<tr>
+<td class="amount">200 g</td>
+<td class="title">Vařený chřest s holandskou omáčkou, zastřené vejce,
+brambory Grenaille 1a,3,7,10,12</td>
+<td class="pricem">199 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Čokoládové brownies s marinovanými višněmi a šlehačkou 1a,3,7,8</td>
+<td class="pricem">89 Kč</td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
 <tr>
 <td>
 <table class="dm"><tr><td class="amount"> </td><td class="title">Hovězí vývar se zeleninou a játrovou zavářkou 1a,3,7,9</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Segedínský guláš z vepřového ramínka a kysaného zelí s našimi houskovými knedlíky 1a,3,7,12</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">1/4</td><td class="title">Pečené kuřecí stehno s hříbkovou smetanovou omáčkou a petrželovými špeclemi 1a,3,7</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Vepřové ražniči s cibulí a anglickou slaninou s opečenými brambory, barbecue majonézou a trhaným salátem 1a,3,7</td><td class="pricem">149 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
