--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.04.2022 08:46:30</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.04.2022 09:11:29</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Pátek, 29. 04. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Čočková s párkem</strong>
+<strong>Tomatová s pestem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažený Vepřový řízek s francouzským bramborovým salátem</strong>
+<strong>Vepřová plec na kmíně s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Houbové rizoto se sýrem a okurkou</strong>
+<strong>Šišky s mákem, cukrem a máslem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							133,-
+							115,-
 						</span>
 </p>
 <p>
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 29.4.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Mrkvový dort</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Borůvkový koláč s drobenkou</div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Bavorské bagety dle denní nabídky</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Halloumi mini burger, salát, rajče, pesto </div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Bujabéza s kousky pečeného lososa v menu  <em title="Ryby">4</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Bujabéza s kousky pečeného lososa samostatně <em title="Ryby">4</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Krůtí prso v tandori omáčce, dušená rýže, koriandr, sezam <em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>350g Bulgurové risotto se sušenými rajčaty a cukrovým hráškem, parmazán <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -85,7 +125,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny jihocesky siven s omackou salsa verde, stredomorsky jahlovy salat s cerstvou zeleninou, pazitkou a citrony 145</li><li>Peceny filet z cerstveho skotskeho lososa s omackou salsa verde, stredomorsky jahlovy salat s cerstvou zeleninou, pazitkou a citrony 175</li><li>Indicke madras kari s kousky krutich prsou, pecenou dyni, rajcaty a hraskem, jasminova ryze 145</li><li>Opekane kanci a danci nudlicky v chlebove placce s pecenou letni zeleninou, pecene brambory, jogurtovy cesnekovy dip {L} 169</li><li>Recka fava – dip ze zluteho hrachu s reckym ovcim syrem a tureckymi cernymi olivami, arabsky chleb, salatek {L} 145</li></ol>
+<ol><li>Peceny atlanticky hejk se salsou z cerstvych rajcat a okurek, korenena ryze s beluga cockou, salatek 145</li><li>Peceny filet z cerstveho morskeho vlka se salsou z cerstvych rajcat a okurek, korenena ryze s beluga cockou, salatek 175</li><li>Ti Pang – pomalu dusene cinske veprove koleno {bez kosti} ve sladke a vonave omacce, jasminova ryze, pak coj 145</li><li>Jehneci burger {chipotle majoneza, rajcata, pekingske zeli, emental}, pecene brambory, salatek 169</li><li>Pecene papriky, cukety a cibule zapecene s ementalem, stredomorsky jahlovy salat se zeleninou a pazitkou, jogurtovy dip 145</li></ol>
 </td>
 </tr>
 </table>
