--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.04.2022 10:45:04</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.04.2022 11:12:38</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -117,7 +117,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Dýňový krém se zázvorem a krutony 1a,7,9</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažené řízečky z vepřové panenky s naším bramborovým salátem s majonézou, citron 1a,3,7,9,10</td><td class="pricem">159 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Nudličky z kuřecích stehýnek se žampiony, rajčatovým protlakem, smetanou a oregánem s jasmínovou rýží 6,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Salát z pečené mrkve, červené cibule a fenyklu s opečenou kukuřičnou polentou a olivovým olejem 12</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"></table>
 </td>
 </tr>
 </table>
